<resources>
    <string name="app_name">My Application2</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button">Sign-Up</string>
    <string name="you_have_an_account_text">You have an account?</string>
    <string name="log_in_text">Log In</string>
    <string name="notes_name">Notes</string>
    <string name="start_text">Start</string>
    <string name="you_have_an_account">You have an account? </string>
    <string name="skip_text">Skip</string>
    <string name="onboarding_description_1">There is 1 text with description</string>
    <string name="onboarding_description_2">There is 2 text with description</string>
    <string name="onboarding_description_3">There is 3 text with description</string>
    <string name="add_note_text">Add Note</string>
    <string name="title_edit">Title</string>
    <string name="message_edit">Message</string>
    <string name="add_button">Add</string>
    <string name="back_textbutton">Back</string>
    <string name="profile_text">Profile</string>
    <string name="logout_text">Logout</string>
    <string name="delete_profile_text">Delete profile</string>
    <string name="detele_notes_text">Detele all notes</string>
    <string name="delete_note_dialog">Deleting Note</string>
    <string name="delete_question">Do you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

</resources>