<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/add_note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        android:textSize="@dimen/textSize_40"
        android:layout_marginTop="@dimen/margin_80"
        android:layout_marginStart="@dimen/margin_25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/profile_text"
        android:textSize="@dimen/size_text_30"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_35"
        android:layout_marginStart="@dimen/margin_25"
        app:layout_constraintTop_toBottomOf="@id/add_note_text"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/notes_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="64 notes"
        android:textSize="@dimen/size_text_30"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginStart="@dimen/margin_25"
        app:layout_constraintTop_toBottomOf="@id/profile_name_text"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/logout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/logout_text"
        android:textStyle="bold"
        android:textSize="@dimen/size_text_30"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginStart="@dimen/margin_25"
        app:layout_constraintTop_toBottomOf="@id/notes_count_text"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/delete_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/delete_profile_text"
        android:textSize="@dimen/size_text_30"
        android:layout_marginEnd="@dimen/margin_25"
        app:layout_constraintTop_toTopOf="@id/profile_name_text"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/delete_notes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detele_notes_text"
        android:textSize="@dimen/size_text_20"
        android:layout_marginEnd="@dimen/margin_25"
        app:layout_constraintTop_toTopOf="@id/notes_count_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>